# double-fischer-random

./: .gitattributes  .gitignore  README.md  Taskfile.sh  analysis_configs.toml  pyproject.toml  ruff.toml  run_analysis.py  run_analysis_github.py
.github/workflows/: cleanup_stale_prs.yml  handle_prs.yml  validate_pr.yml
analysis/: 1000.json  10000.json  11000.json  12000.json  123.json  123123.json  13000.json  13001.json  13002.json  13003.json  13004.json  13005.json  13006.json  13007.json  13008.json  13009.json  13010.json  13011.json  13012.json  13013.json  13014.json  13015.json  13016.json  13017.json  13018.json  13019.json  13020.json  13021.json  13022.json  13023.json  13024.json  13025.json  13026.json  13027.json  13028.json  13029.json  14000.json  15000.json  15001.json  15002.json  (+33 more)
data/: analysis_results.parquet
scripts/: fetch_position.py  handle_prs.py  results_to_db.py  run_analysis.py  utils.py
src/: analysis_config.py  analysis_results.py  create_positions.py  data_models.py  db.py  distance_matrix.py  explore.ipynb  position_queue.py  positions.py  sampling.py  similarity.py  stockfish_analyzer.py  utils.py
src/dfrc_analysis/: utils.py
src/dfrc_analysis/analysis/: analyzer.py  config.py  eval.py  results.py
src/dfrc_analysis/db/: build_models.py  models.py  parquet_db.py
src/dfrc_analysis/positions/: sampling.py  similarity.py
tests/: test_analysis_results.py  test_eval.py  test_positions.py
