[project]
name = "double-fischer-random"
version = "0.1.0"
description = "Analysis of Asymmetric Double Fischer Random positions"
readme = "README.md"

dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "chess>=1.10.0"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "ipython>=8.21.0",
    "ipykernel>=6.29.2",
    "matplotlib>=3.8.3"
]

[tool.pyright]
typeCheckingMode = "basic"
