[project]
name = "double-fischer-random"
version = "0.1.0"
description = "Analysis of Asymmetric Double Fischer Random positions"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "chess>=1.10.0",
    "msgspec>=0.18.6",
    "pqdict>=1.4.0",
    "tqdm>=4.67.1",
    "pygithub>=2.6.1",
    "polars>=1.23.0",
    "cyclopts>=3.9.0",
    "sqlmodel>=0.0.22",
    "duckdb>=1.2.0",
    "duckdb-engine>=0.15.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "ipython>=8.21.0",
    "ipykernel>=6.29.2",
    "matplotlib>=3.8.3",
    "pytest>=8.3.4",
]

[tool.pyright]
typeCheckingMode = "basic"
